adjust spacing with login and signup forms, still working on bugs in gameboard component

--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,3 +1,19 @@
 .login-spacing {
     padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    /* align-items: center;
+    justify-content: center; */
+}
+.labels {
+    text-align: left;
+}
+button {
+    margin-top: 5px;
 }
