--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -2,4 +2,16 @@
     padding: 100px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+.labels {
+    text-align: left;
+}
+@media screen and (max-width:767px){
+    .labels{
+        text-align: center;
+    }
+    form {
+        width: 100%;
+    }
 }
